Added Example of UI Updating to Cyclomatic Complexity

--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -95,8 +95,7 @@
                 <h2 id="Cyclomatic">Cyclomatic complexity</h2>
                 <p>Quantitative measure of the complexity of a program based on the number of linearly independent paths through its source code.</p>
                 <p>Ref: <a>https://en.wikipedia.org/wiki/Fan-out_(software)</a></p>
-                <!------ FAN IN REPORT VALUES --->
-                <!------ FAN OUT REPORT VALUES --->
+                <!------ @@Cyclomatic Output@@  ---->
                 <hr/>
                 <h2 id="Command">Command line Parameter Injection</h2>
                 <p>Assessment of security vulnerabilities arising from improper handling of command-line inputs, potentially leading to injection attacks.</p>
