--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -11,8 +11,11 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
         <style>
-            .dropdown-menu-end{
-               background-color: #212529;
+            .dropdown-menu-end, .dropdown-menu-end .nav-item{
+               background-color: #212529 !important;
+            }
+            .dropdown-menu-end .nav-item:hover {
+                background-color: rgba(33, 37, 41,0.8) !important;
             }
             html {
                 scroll-padding-top: 70px; /* height of sticky header */
@@ -74,7 +77,7 @@
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Report Sections</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                 <li class="nav-item"><a class="nav-link" href="#Fan">Fan-in/Fan-out</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#Creds">Credentials in code</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#WMC">Weighted methods per class</a></li>
@@ -184,51 +187,72 @@
                 <hr/>
                 <h2 id="Depth">Depth of conditional nesting</h2>
                 <p>Analysis of the number of nested conditional statements within the code, indicating its complexity and potential readability issues.</p>
-                <div class="table-responsive">
-                    <table class="table nested-if-table" id="nestedIfTable">
-                        <thead>
-                        <tr>
-                            <th>Function Name</th>
-                            <th>Nested If's</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
+                <button class="accordion">View Nested If Score</button>
+                <div class="panel">
+                    <div class="table-responsive">
+                        <table class="table nested-if-table" id="nestedIfTable">
+                            <thead>
+                            <tr>
+                                <th>Function Name</th>
+                                <th>Nested If's</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                    <p id="nestedIfScore">Nested if's score: </p>
                 </div>
-                <p id="nestedIfScore">Nested if's score: </p>
-
                 <hr/>
                 <h2 id="Redundant">Redundant code & code duplication</h2>
                 <p>Identification of duplicate or unnecessary code segments to improve code maintainability and efficiency.</p>
-                <div class="table-responsive">
-                    <table class="table redundant-code-table" id="redundantCodeTable">
-                        <thead>
-                        <tr>
-                            <th>Function Name</th>
-                            <th>Unreachable Code Count</th>
-                            <th>Duplicated code</th>
-                            <th>Function Usage</th>
-                            <th>Variable Usage</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
+                <button class="accordion">View Redundant code & code duplication</button>
+                <div class="panel">
+                    <div class="table-responsive">
+                        <table class="table redundant-code-table" id="redundantCodeTable">
+                            <thead>
+                            <tr>
+                                <th>Function Name</th>
+                                <th>Unreachable Code Count</th>
+                                <th>Duplicated code</th>
+                                <th>Function Usage</th>
+                                <th>Variable Usage</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                    <p id="redundantCodeScore">Redundant code score: </p>
                 </div>
-                <p id="redundantCodeScore">Redundant code score: </p>
                 <hr/>
             </div>
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <script>
+            var acc = document.getElementsByClassName("accordion");
+            var i;
+
+            for (i = 0; i < acc.length; i++) {
+                acc[i].addEventListener("click", function() {
+                    this.classList.toggle("active");
+                    var panel = this.nextElementSibling;
+                    if (panel.style.display === "block") {
+                        panel.style.display = "none";
+                    } else {
+                        panel.style.display = "block";
+                    }
+                });
+            }
+        </script>
+
         <script>
           document.addEventListener('DOMContentLoaded', function() {
-            fetch('../../../nestedIfResults.json')
-                .then(response => response.json())
-                .then(data => {
+              let redresponse = '' +
+                  '@@nested if code response here@@'
+                  +'';
+              let data = JSON.parse(redresponse);
                     const tableBody = document.getElementById('nestedIfTable').getElementsByTagName('tbody')[0];
                     let totalScore = 0;
                     for (const [functionName, score] of Object.entries(data)) {
@@ -243,51 +267,56 @@
                         totalScore += parseInt(score, 10);
                     }
                     document.getElementById('nestedIfScore').textContent = 'Total nested if\'s score: ' + totalScore;
-                })
-                .catch(error => console.error('Error loading the nested if results:', error));
+
          });
         </script>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
-                fetch('../../../redundantCode.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        const tableBody = document.getElementById('redundantCodeTable').getElementsByTagName('tbody')[0];
 
-                        // Iterate over the keys in unreachableCodeCounts
-                        Object.keys(data.unreachableCodeCounts).forEach(methodName => {
-                            let row = tableBody.insertRow();
-                            let functionNameCell = row.insertCell(0);
-                            functionNameCell.textContent = methodName + "()";
+                let redresponse = '' +
+                    '@@Redudant code response here@@'
+                    +'';
+                let data = JSON.parse(redresponse);
 
-                            let unreachableCodeCountCell = row.insertCell(1);
-                            let unreachableCodeCount = data.unreachableCodeCounts[methodName];
-                            unreachableCodeCountCell.textContent = unreachableCodeCount === 0 ? "Reachable" : "Unreachable (" + unreachableCodeCount + ")";
+                const tableBody = document.getElementById('redundantCodeTable').getElementsByTagName('tbody')[0];
+                if(data && data.unreachableCodeCounts){
+                    // Iterate over the keys in unreachableCodeCounts
+                    Object.keys(data.unreachableCodeCounts).forEach(methodName => {
+                        let row = tableBody.insertRow();
+                        let functionNameCell = row.insertCell(0);
+                        functionNameCell.textContent = methodName + "()";
 
-                            let duplicatedCodeCell = row.insertCell(2);
-                            let duplicatedCodeCount = data.duplicatedCodeCounts[methodName + "()"] || 0;
-                            duplicatedCodeCell.textContent = duplicatedCodeCount > 0 ? "Yes (" + duplicatedCodeCount + ")" : "No";
+                        let unreachableCodeCountCell = row.insertCell(1);
+                        let unreachableCodeCount = data.unreachableCodeCounts[methodName];
+                        unreachableCodeCountCell.textContent = unreachableCodeCount === 0 ? "Reachable" : "Unreachable (" + unreachableCodeCount + ")";
 
-                            let functionUsageCell = row.insertCell(3);
-                            functionUsageCell.textContent = data.uniqueMethodNames.includes(methodName) ? "Not used" : "Used";
+                        let duplicatedCodeCell = row.insertCell(2);
+                        let duplicatedCodeCount = data.duplicatedCodeCounts[methodName + "()"] || 0;
+                        duplicatedCodeCell.textContent = duplicatedCodeCount > 0 ? "Yes (" + duplicatedCodeCount + ")" : "No";
 
-                            let variableUsageCell = row.insertCell(4);
-                            variableUsageCell.textContent = data.currentUnusedVariables[methodName] || "All used";
-                        });
+                        let functionUsageCell = row.insertCell(3);
+                        functionUsageCell.textContent = data.uniqueMethodNames.includes(methodName) ? "Not used" : "Used";
 
-                        // Display totals
-                        if (data.totals) {
-                            let totalsRow = tableBody.insertRow();
-                            totalsRow.insertCell(0).textContent = "Totals:";
-                            totalsRow.insertCell(1).textContent = "Total unreachable code: " + data.totals.totalUnreachableCode;
-                            totalsRow.insertCell(2).textContent = "Total duplicated code: " + data.totals.totalDuplicatedCode;
-                            totalsRow.insertCell(3).textContent = "Total unused functions: " + data.totals.totalUnusedFunctions;
-                            totalsRow.insertCell(4).textContent = "Total methods with unused variables: " + data.totals.totalMethodsWithUnusedVariables;
-                        }
-                        let grandTotal = data.totals.totalUnreachableCode + data.totals.totalDuplicatedCode + data.totals.totalUnusedFunctions + data.totals.totalMethodsWithUnusedVariables;
-                        document.getElementById('redundantCodeScore').textContent = 'Total redundant code score: ' + grandTotal;
-                    })
-                    .catch(error => console.error('Error loading the redundant code data:', error));
+                        let variableUsageCell = row.insertCell(4);
+                        variableUsageCell.textContent = data.currentUnusedVariables[methodName] || "All used";
+                    });
+                }
+
+
+                // Display totals
+                if (data && data.totals) {
+                    let totalsRow = tableBody.insertRow();
+                    totalsRow.insertCell(0).textContent = "Totals:";
+                    totalsRow.insertCell(1).textContent = "Total unreachable code: " + data.totals.totalUnreachableCode;
+                    totalsRow.insertCell(2).textContent = "Total duplicated code: " + data.totals.totalDuplicatedCode;
+                    totalsRow.insertCell(3).textContent = "Total unused functions: " + data.totals.totalUnusedFunctions;
+                    totalsRow.insertCell(4).textContent = "Total methods with unused variables: " + data.totals.totalMethodsWithUnusedVariables;
+
+                    let grandTotal = data.totals.totalUnreachableCode + data.totals.totalDuplicatedCode + data.totals.totalUnusedFunctions + data.totals.totalMethodsWithUnusedVariables;
+                    document.getElementById('redundantCodeScore').textContent = 'Total redundant code score: ' + grandTotal;
+
+                }
+
             });
         </script>
 
