--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -319,6 +319,15 @@
 
             });
         </script>
-
+        <script>
+            function toggleViewById(id) {
+                let div = document.getElementById(id);
+                if (div.style.display === "block") {
+                    div.style.display = "none"
+                } else {
+                    div.style.display = "block"
+                }
+            }
+        </script>
     </body>
 </html>
