--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -151,11 +151,26 @@
                 </div>
                 <hr/>
                 <h2 id="Cyclomatic">Cyclomatic complexity</h2>
-                <p>Quantitative measure of the complexity of a program based on the number of linearly independent paths through its source code.</p>
-                <p>Ref: <a>https://en.wikipedia.org/wiki/Fan-out_(software)</a></p>
+                <p>Quantitative measure of the complexity of a program based on the number of linearly independent paths through its source code. This will only show functions that have a complexity greater than 4. This has been selected as a single fuction that handles 4 branches of logic may be handling too much complexity and/or violating 'SOLID' principles</p>
+                <p>Ref: <a href="https://www.baeldung.com/solid-principles" target="_blank">SOLID programming principles</a></p>
+                <p>Ref: <a href="https://www.geeksforgeeks.org/cyclomatic-complexity/" target="_blank">Cyclomatic Complexity</a></p>
                 <button class="accordion">View Cyclomatic complexity Results</button>
                 <div class="panel">
                     <!------ @@Cyclomatic Output@@  ---->
+                    <div class="table-responsive">
+                        <table class="table redundant-code-table" id="complexityTable">
+                            <thead>
+                            <tr>
+                                <th>Class</th>
+                                <th>Method Name</th>
+                                <th>Complexity Score</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                    <p id="complexityTableScore">Complexity: </p>
                 </div>
 
                 <hr/>
@@ -178,10 +193,33 @@
                 <hr/>
 
                 <h2 id="Bill">Bill Of Materials</h2>
-                <p>A bill of materials (BoM) typically refers to a list of dependencies or components used in the project. </p>
+                <p>A bill of materials (BoM) typically refers to a list of dependencies or components used in the project. Selecting an import from the list will take you to <em>mvnreposiitory.com</em> to view the information for the given import.</p>
                 <button class="accordion">View Bill of Materials</button>
                 <div class="panel">
-                    <!------ @@Bill Of Materials@@  ---->
+                    <div class="container">
+                        <h3>Standard Java Imports</h3>
+                        <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                                <th>Imports that are contained within JDK</th>
+                            </tr>
+                            </thead>
+                            <tbody id="importTreeBody">
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="container">
+                        <h3>Non-Standard Imports</h3>
+                        <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                                <th>All scanned non-standard imports</th>
+                            </tr>
+                            </thead>
+                            <tbody id="NSTDimportTreeBody">
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
                 <hr/>
                 <hr/>
@@ -248,11 +286,44 @@
         </script>
 
         <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                let cyclicResp = '' +
+                    '@@Cyclic Complex Response Here@@'
+                    +'';
+                let data = JSON.parse(cyclicResp);
+                const tableBody = document.getElementById('complexityTable').getElementsByTagName('tbody')[0];
+                let totalScore = 0;
+                console.log(Object.entries(data));
+                for (const [className, methods] of Object.entries(data)) {
+                    if(className === "_Admin_Total"){
+                        totalScore = methods[0];
+                        break;
+                    }
+
+                        for (const score of Object.entries(methods)) {
+                            if(score[1].b <= 4){
+                                continue;
+                            }
+                            let row = tableBody.insertRow();
+                            let cell1 = row.insertCell(0);
+                            let cell2 = row.insertCell(1);
+                            let cell3 = row.insertCell(2);
+                            cell1.textContent = className;
+                            cell2.textContent = score[1].a;
+                            cell3.textContent = score[1].b;
+                        }
+                }
+                document.getElementById('complexityTableScore').innerHTML = 'Average Cyclomatic Complexity of all classes: <b>' + totalScore.b + '</b>, which represents a risk level of: <b>' + totalScore.a + '</b>';
+                console.log( document.getElementById('complexityTableScore'));
+            });
+        </script>
+
+        <script>
           document.addEventListener('DOMContentLoaded', function() {
-              let redresponse = '' +
+              let nestedResp = '' +
                   '@@nested if code response here@@'
                   +'';
-              let data = JSON.parse(redresponse);
+              let data = JSON.parse(nestedResp);
                     const tableBody = document.getElementById('nestedIfTable').getElementsByTagName('tbody')[0];
                     let totalScore = 0;
                     for (const [functionName, score] of Object.entries(data)) {
@@ -318,6 +389,62 @@
                 }
 
             });
+        </script>
+        <script>
+            // Function to create table rows recursively
+            function createTableRows(node, depth, parentKey, elementID) {
+                if (node.children && Object.keys(node.children).length > 0){
+                    let d = '';
+                    for (let i = 0; i < depth; i++) {
+                        d += i===0? '└──' : '──';
+                    }
+                    d+= ' ';
+                    depth++;
+                    for (const [key, value] of Object.entries(node.children)) {
+                        let searchOnX = '';
+                        if(elementID === 'NSTDimportTreeBody'){
+                           searchOnX = "<span style='float: right'> View this Import on: <a target='_blank' href='https://search.maven.org/search?q="+ (parentKey ? parentKey + '.' : '') +key+"'>Maven Central Repository</a> or <a target='_blank' href='https://mvnrepository.com/search?q="+ (parentKey ? parentKey + '.' : '') +key+"'>MVN Repository</a></span>";
+                        }
+
+                        if(depth === 1){
+                            document.getElementById(elementID).innerHTML += '<tr><td> <b>'+ key + searchOnX + '</td></tr>';
+                        }else if(value.children && Object.keys(value.children).length > 0){
+                            document.getElementById(elementID).innerHTML += '<tr><td>' + d + key + searchOnX + '</td></tr>';
+                        } else{
+                            document.getElementById(elementID).innerHTML += '<tr><td>' + d + key + searchOnX + '</td></tr>';
+                        }
+
+                        createTableRows(value, depth, parentKey === undefined ? key : parentKey + '.' + key, elementID);
+                    }
+
+                } else {
+                    document.getElementById(elementID).innerHTML += '<tr></tr>';
+                }
+            }
+
+            document.addEventListener('DOMContentLoaded', function() {
+                // Sample JSON data
+                let stdResp = '' +
+                    '@@StdImport@@'
+                    + '';
+                let jsonData = JSON.parse(stdResp);
+
+
+                // Populate table with JSON data
+                createTableRows(jsonData, 0, undefined, 'importTreeBody');
+            });
+
+            document.addEventListener('DOMContentLoaded', function() {
+                // Sample JSON data
+                let nonStdResp = '' +
+                    '@@nonStdImport@@'
+                    + '';
+                let jsonData = JSON.parse(nonStdResp);
+
+                // Populate table with JSON data
+                createTableRows(jsonData, '', undefined, 'NSTDimportTreeBody');
+            });
+
         </script>
         <script>
             function toggleViewById(id) {
