--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -188,7 +188,72 @@
                 <p>Ref: <a>https://en.wikipedia.org/wiki/Fan-out_(software)</a></p>
               <button class="accordion">View Fog Index Results</button>
                 <div class="panel">
-                    <!------ @@Fog Output@@  ---->
+                    <div class="container"  style="margin-top: 10px;">
+                        <h3>Code Comments Fog Index</h3>
+                        <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                                <th>Property</th>
+                                <th>Value</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Comment Count</td>
+                                <td id="commentCount" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td>Comment Sentences</td>
+                                <td id="commentSentences" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td>Comment Complex Words</td>
+                                <td id="commentComplexWords" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td>Comment Range</td>
+                                <td id="commentRange" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td><b>Evaluation of Comment Fog Index</b></td>
+                                <td id="commentEval" class="fogData">Error Calculating</td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                        <h3>All Code Fog Index</h3>
+                        <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                                <th>Property</th>
+                                <th>Value</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>Code Count</td>
+                                <td id="codeCount" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td>Code Sentences/lines</td>
+                                <td id="codeSentences" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td>Code Complex Words</td>
+                                <td id="codeComplexWords" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td>Code Range</td>
+                                <td id="codeRange" class="fogData">0</td>
+                            </tr>
+                            <tr>
+                                <td><b>Evaluation of Code Fog Index</b></td>
+                                <td id="codeEval" class="fogData">Error Calculating</td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
                 </div>
                 <hr/>
 
@@ -196,7 +261,7 @@
                 <p>A bill of materials (BoM) typically refers to a list of dependencies or components used in the project. Selecting an import from the list will take you to <em>mvnreposiitory.com</em> to view the information for the given import.</p>
                 <button class="accordion">View Bill of Materials</button>
                 <div class="panel">
-                    <div class="container">
+                    <div class="container" style="margin-top: 10px;">
                         <h3>Standard Java Imports</h3>
                         <table class="table table-bordered">
                             <thead>
@@ -445,6 +510,21 @@
                 createTableRows(jsonData, '', undefined, 'NSTDimportTreeBody');
             });
 
+        </script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                // Sample JSON data
+                let fogResp = '' +
+                    '@@fogResp@@'
+                    + '';
+                let jsonData = JSON.parse(fogResp);
+                let foggy = document.getElementsByClassName('fogData');
+
+
+                for (let i = 0; i < foggy.length; i++) {
+                    foggy[i].innerHTML = jsonData[i];
+                }
+            });
         </script>
         <script>
             function toggleViewById(id) {
