Fix fan-in/fan-out and credentials in code

--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -102,17 +102,19 @@
                 <h1>Seng4430 - Group 1 - Generated Report</h1>
                 <p class="lead">This comprehensive analysis provides invaluable insights into the software's integrity, performance, and adherence to industry standards. Through meticulous examination and advanced metrics, this report aims to empower stakeholders with actionable data to enhance the software's quality and reliability. Dive into the findings to uncover areas of strength, pinpoint opportunities for improvement, and propel your project towards excellence.</p>
                 <h2 id="Fan">Fan-in/Fan-out</h2>
-                <p><b>Fan-in:</b> The number of modules depending on a specific module.<br/>
-                <b>Fan-out:</b> The number of modules a specific module depends on.</p>
+                <p><b>Fan-in:</b> The number of methods depending on a specific method.<br/>
+                <b>Fan-out:</b> The number of methods a specific method depends on.</p>
                 <p>Ref: <a>https://en.wikipedia.org/wiki/Fan-out_(software)</a></p>
+                <p>Ref: <a>https://stackoverflow.com/questions/4092228/design-principle-high-fan-in-vs-high-fan-out</a></p>
                 <button class="accordion">View Fan-in/Fan-out Results </button>
                 <div class="panel">
                     <!------ @@Fan-in/Fan-out Output@@  ---->
                 </div>
                 <hr/>
                 <h2 id="Creds">Credentials in code</h2>
-                <p>How credentials are stored within the codebase & how credentials are utilised within the code for authentication and authorization purposes.</p>
-                <p>Ref: <a>lmao.com</a></p>
+                <p>List of potential API keys and passwords found in the codebase. Manual scanning is required to ensure no credentials are present.</p>
+                <p>Ref: <a>https://blog.gitguardian.com/secrets-in-source-code-episode-3-3-building-reliable-secrets-detection/</a></p>
+                <p>Ref: <a>https://en.wikipedia.org/wiki/Entropy_(information_theory)</a></p>
                 <button class="accordion">View Found Credentials </button>
                 <div class="panel">
                     <!------ @@Credentials Output@@  ---->
