App now exports reports to a App Dir, rather than the internal src. + Added Commenting & code Clean up.

--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -171,6 +171,7 @@
                         </table>
                     </div>
                     <p id="complexityTableScore">Complexity: </p>
+                    <p><em>The above table shows individual functions with a high complexity.</em></p>
                 </div>
 
                 <hr/>
@@ -193,6 +194,7 @@
                         </table>
                     </div>
                     <p>Avg LCOM Score: <span id="LCOMTableScore"></span> | 0 = Fully cohesive, 1 = No cohesion</p>
+                    <p><em>0 indicates perfect cohesion (all methods in the class use all fields) and 1 indicates no cohesion (no method uses any field more than once).</em></p>
                 </div>
 
                 <hr/>
