report template alteration to WMC anb CBO sections

--- a/app/src/main/resources/Report/Default_Report.html
+++ b/app/src/main/resources/Report/Default_Report.html
@@ -121,8 +121,8 @@
                 </div>
                 <hr/>
                 <h2 id="WMC">Weighted methods per class (WMC)</h2>
-                <p>The complexity of a class by counting its methods, with different weights assigned based on their complexity.</p>
-                <p>Ref: <a>https://en.wikipedia.org/wiki/Fan-out_(software)</a></p>
+                <p>The complexity of a class by counting and assessing the complexity of its methods.</p>
+                <p>Ref: <a>https://isroset.org/pub_paper/IJSRCSE/ISROSET-IJSRCSE-00043.pdf</a></p>
                 <button class="accordion">View WMC Results</button>
                 <div class="panel">
                     <!------ @@WMC Output@@  ---->
@@ -130,7 +130,7 @@
                 <hr/>
                 <h2 id="CBO">Coupling between object classes (CBO)</h2>
                 <p>Measure of how closely interconnected different classes are within the codebase.</p>
-                <p>Ref: <a>https://en.wikipedia.org/wiki/Fan-out_(software)</a></p>
+                <p>Ref: <a>https://isroset.org/pub_paper/IJSRCSE/ISROSET-IJSRCSE-00043.pdf</a></p>
                 <button class="accordion">View CBO Results</button>
                 <div class="panel">
                     <!------ @@CBO Output@@  ---->
